[gd_scene load_steps=2 format=3 uid="uid://uuh5qfqveu2w"]

[ext_resource type="Script" path="res://Scripts/level_final.gd" id="1_4x8r2"]

[node name="LevelFinal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_4x8r2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(600, 400)

[node name="CongratulationsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "üéâ CONGRATULATIONS! üéâ"
horizontal_alignment = 1

[node name="SpacerTop" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="CurrentScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Your Time: 02:34"
horizontal_alignment = 1

[node name="NewRecordLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "üèÜ NEW RECORD! üèÜ"
horizontal_alignment = 1

[node name="SpacerMiddle" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Previous Best: 03:45"
horizontal_alignment = 1

[node name="SpacerBottom" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
text = "Play Again"

[node name="ButtonSpacer" type="Control" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
text = "Main Menu"
